--- a/style.css
+++ b/style.css
@@ -17,7 +17,12 @@ table {
 	border-style: solid;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 15px;
 	border-color: #4D4D4D;
+}
+table caption {
+	font-weight: bold;
+	color: black;
 }
 body table tr {
 	border-right-style: hidden;
@@ -44,7 +49,7 @@ ul {
 li {
 	text-align: center;
     float: left;
-	width: 33%;
+	width: 20%;
 	padding-bottom: 8px;
 }
 
