--- a/Code/style.css
+++ b/Code/style.css
@@ -20,6 +20,11 @@ table {
 	margin-bottom: 15px;
 	border-color: #4D4D4D;
 }
+form {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
 table caption {
 	font-weight: bold;
 	color: black;
