--- a/Code/style.css
+++ b/Code/style.css
@@ -41,6 +41,12 @@ table tr th {
 	border-style: none none solid;
 	border-bottom-color: #3A3A3A;
 }
+#welcome {
+	padding: 100px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
 a {
 	text-decoration: none;
 	color: darkslategrey;
